# NokaMan

./: README.md  pyproject.toml
data/fixtures/: fairness_report.json
data/samples/: de_writing_a2_cafe.json  de_writing_b1.json  en_writing_c1.json  en_writing_c2.json  es_writing_a2.json  fr_writing_b1.json  ja_writing_a1.json  ja_writing_b2.json  ko_writing_b2.json  pt_writing_a1.json  sv_writing_a1.json  tr_writing_a1.json
docs/: CEFR_MAPPING.md  FAIRNESS.md  LANGUAGES.md
src/nokaman/: __init__.py  cli.py
src/nokaman/api/: app.py
src/nokaman/eval/: adaptive.py  fairness.py  metrics.py  pipeline.py
src/nokaman/models/: toy.py
src/nokaman/rubrics/: registry.py
tests/: test_adaptive.py  test_api.py  test_cli.py  test_fairness.py  test_framework_bands.py  test_metrics.py
