[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nokaman"
version = "0.3.18"
description = "NokaMan: multi-language learning ability assessment for language apps (EN/KO/JA and more)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MergeOS / ThanhTrucSolutions" }]
keywords = ["language-learning", "cefr", "assessment", "esl", "korean", "japanese", "nlp", "ml"]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
gui = [
  "PySide6>=6.6",
]
torch = [
  "torch>=2.2",
]
nlp = [
  "scikit-learn>=1.4",
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.27",
]
llm = [
  "httpx>=0.27",
]

[project.scripts]
nokaman = "nokaman.cli:app"
nokaman-gui = "nokaman.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
